<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create("modulos", function (Blueprint $table) {
            $table->bigIncrements("id");
            $table->uuid("public_id")->unique();
            $table->foreignId("curso_id")->constrained()->cascadeOnDelete();
            $table->string("titulo", 255);
            $table->integer("ordem");
            $table->timestamps();
            $table->unique(["curso_id", "ordem"]);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists("modulos");
    }
};
