<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create("legendas", function (Blueprint $table) {
            $table->bigIncrements("id");
            $table->uuid("public_id")->unique();
            $table
                ->foreignId("aula_id")
                ->constrained("aulas")
                ->cascadeOnDelete();
            $table->string("codigo_idioma", 10);
            $table->string("url_arquivo", 255);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists("legendas");
    }
};
